--- a/index.html
+++ b/index.html
@@ -1,8 +1,144 @@
-<p>Hello 大家好</p>
-<p>我ayuwang 欢迎来到我的网站 </p>
-<p>很高兴你来到这里, 你可以在以下的网站找到我</p>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>我的网站</title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+	<header>
+		<nav>
+			<ul>
+				<li><a href="#">首页</a></li>
+				<li><a href="#">关于我们</a></li>
+				<li><a href="#">产品</a></li>
+				<li><a href="#">联系我们</a></li>
+			</ul>
+		</nav>
+		<h1>欢迎来到我的网站</h1>
+	</header>
+	
+	<main>
+		<section>
+			<h2>我们的使命</h2>
+			<p>我们的使命是提供最优质的产品和服务，让客户感到满意。</p>
+		</section>
+		<section>
+			<h2>我们的产品</h2>
+			<p>我们提供多种产品，包括电子产品、家具、食品等。</p>
+		</section>
+	</main>
+	
+	<footer>
+		<p>版权所有 © 2023 我的网站</p>
+	</footer>
+</body>
+</html>
+body {
+	font-family: Arial, sans-serif;
+	margin: 0;
+	padding: 0;
+}
 
-<ul>
-  <li> <a href="https://www.zhople/AJLoveChina">知乎</a> </li>
-  <li> <a href="http://hejie.nigeer">我的博客(已经不更细了,现在在知乎写文章)</a> </li>
-</ul>
+header {
+	background-color: #333;
+	color: #fff;
+	padding: 20px;
+}
+
+nav ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+
+nav li {
+	display: inline-block;
+	margin-right: 20px;
+}
+
+nav a {
+	color: #fff;
+	text-decoration: none;
+}
+
+h1 {
+	font-size: 40px;
+	margin: 0;
+	padding: 0;
+}
+
+main {
+	margin: 20px;
+}
+
+section {
+	margin-bottom: 40px;
+}
+
+h2 {
+	font-size: 30px;
+	margin: 0;
+	padding: 0;
+}
+
+footer {
+	background-color: #333;
+	color: #fff;
+	padding: 20px;
+	text-align: center;
+}
+body {
+	font-family: Arial, sans-serif;
+	margin: 0;
+	padding: 0;
+}
+
+header {
+	background-color: #333;
+	color: #fff;
+	padding: 20px;
+}
+
+nav ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+
+nav li {
+	display: inline-block;
+	margin-right: 20px;
+}
+
+nav a {
+	color: #fff;
+	text-decoration: none;
+}
+
+h1 {
+	font-size: 40px;
+	margin: 0;
+	padding: 0;
+}
+
+main {
+	margin: 20px;
+}
+
+section {
+	margin-bottom: 40px;
+}
+
+h2 {
+	font-size: 30px;
+	margin: 0;
+	padding: 0;
+}
+
+footer {
+	background-color: #333;
+	color: #fff;
+	padding: 20px;
+	text-align: center;
+}
