--- a/index.html
+++ b/index.html
@@ -32,113 +32,73 @@
 	<footer>
 		<p>版权所有 © 2023 我的网站</p>
 	</footer>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>高端大气的网站</title>
+<style>
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
+
+nav {
+  background-color: #555;
+  color: #fff;
+  padding: 10px 0;
+  text-align: center;
+}
+
+nav a {
+  color: #fff;
+  text-decoration: none;
+  margin: 0 20px;
+}
+
+section {
+  padding: 20px;
+  text-align: center;
+}
+
+footer {
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
+</style>
+</head>
+<body>
+
+<header>
+  <h1>高端大气的网站</h1>
+</header>
+
+<nav>
+  <a href="#">首页</a>
+  <a href="#">关于我们</a>
+  <a href="#">服务</a>
+  <a href="#">联系我们</a>
+</nav>
+
+<section>
+  <h2>欢迎来到我们的网站！</h2>
+  <p>这里是一个高端大气的网站，提供优质的服务和信息。</p>
+</section>
+
+<footer>
+  <p>&copy; 2024 高端大气的网站</p>
+</footer>
+
 </body>
 </html>
-body {
-	font-family: Arial, sans-serif;
-	margin: 0;
-	padding: 0;
-}
-
-header {
-	background-color: #333;
-	color: #fff;
-	padding: 20px;
-}
-
-nav ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-}
-
-nav li {
-	display: inline-block;
-	margin-right: 20px;
-}
-
-nav a {
-	color: #fff;
-	text-decoration: none;
-}
-
-h1 {
-	font-size: 40px;
-	margin: 0;
-	padding: 0;
-}
-
-main {
-	margin: 20px;
-}
-
-section {
-	margin-bottom: 40px;
-}
-
-h2 {
-	font-size: 30px;
-	margin: 0;
-	padding: 0;
-}
-
-footer {
-	background-color: #333;
-	color: #fff;
-	padding: 20px;
-	text-align: center;
-}
-body {
-	font-family: Arial, sans-serif;
-	margin: 0;
-	padding: 0;
-}
-
-header {
-	background-color: #333;
-	color: #fff;
-	padding: 20px;
-}
-
-nav ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-}
-
-nav li {
-	display: inline-block;
-	margin-right: 20px;
-}
-
-nav a {
-	color: #fff;
-	text-decoration: none;
-}
-
-h1 {
-	font-size: 40px;
-	margin: 0;
-	padding: 0;
-}
-
-main {
-	margin: 20px;
-}
-
-section {
-	margin-bottom: 40px;
-}
-
-h2 {
-	font-size: 30px;
-	margin: 0;
-	padding: 0;
-}
-
-footer {
-	background-color: #333;
-	color: #fff;
-	padding: 20px;
-	text-align: center;
-}
